# FANC

./: .gitignore  CMakeLists.txt  README.md  assembler_coder.hpp  bp.hpp  fanC.hpp  gdb.exe.stackdump  hw3.exe.stackdump  main.cpp  main.hpp  makefile  parser.hpp  parser.output  parser.ypp  registers.hpp  scanner.l  scanner.lex  t1.in  truthval1.ypp
hw5tests/: test14.in  test28.in
hw5tests/prev/: test1.in
selfcheck_tmp/: hw3  lex.yy.c  parser.tab.cpp  parser.tab.hpp  parser.ypp  scanner.lex  t1.res
tests/: check  hw3
